# Synap

./: .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  example.cpp  pyrightconfig.json  test.py
.cache/clangd/index/: bindings.cpp.C9F39126DE36DFCD.idx  example.cpp.6B3FDF2139E91ED1.idx  storage.h.DFE1272096304E8A.idx  tensor.cpp.A374EF9FF3B3A616.idx  tensor.h.0DC07DB4796A8446.idx
docs/: Operations.md  Tensors.md  setup.md
python/: README_GRADIENT_DESCENT.md  gradient_descent_demo.py  min_nn.py  nn.py  test.py  test_activations.py  test_autodiff.py  test_backwardpass.py  test_broadcasting.py  test_forwardpass.py  test_grad_descent.py  test_gradient_descent.py  test_module_nn.py  test_nn.py  test_nn2.py  test_tensor.py
python/mnist/: README_MNIST.md  test_mnist.py  test_mnist_simple.py  test_reading_file.py
python/tests/: test.py  test_broadcasting.py  test_module_nn.py  test_mse.py  test_softmax.py
src/: bindings.cpp
src/synap/: tensor.cpp  tensor.h
src/tensor/: autodiff.cpp  autodiff.h  storage.h  tensor.cpp  tensor.h
stdj.bak/: synap.pyi
stubs/: example.pyi  synap.pyi
